test_scores/negative_dimers/features/Q3SY00.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q3SY00.pkl.xz